--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,22 @@
 	<link rel="stylesheet" href="/css/main.css" />
 
 	<link rel="stylesheet" href="/components/button/button.css" />
-	<link rel="stylesheet" href="/components/chat/chat.css" />
+
 </head>
 <body>
 
 	<div class="js-login" hidden="hidden">
 	</div>
-	<div class="js-chat" hidden="hidden">
+	<div class="js-singUp" hidden="hidden">
 	</div>
+	<div class="mainElem" hidden="hidden">
+		<p> Ты залогинился! Ура!</p>
+	</div>
+
 
 	<script src="/components/button/button.js"></script>
 	<script src="/components/form/form.js"></script>
-	<script src="/components/chat/chat.js"></script>
-
+	<script src="/pages/signin.js"></script>
 	<script src="/libs/technolibs/index.js"></script>
 	<script src="main.js"></script>
 </body>
