добавлена структура бэм и шаблонизатор для button, input, есть косяк с вложенным div, который всегда создает класс block

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,19 @@
 	<script src="/modules/route.js"></script>
 	<script src="/modules/router.js"></script>
 
+	<script src="/modules/models.js"> </script>
+	<script src="/models/user.js"></script>
+
 	<script src="/components/block/block.js"></script>
+	<script src="/components/input/input.tmpl.js"></script>
+	<script src="/components/input/input.js"></script>
+	<script src="/components/button/button.tmpl.js"></script>
 	<script src="/components/button/button.js"></script>
 	<script src="/components/form/form.tmpl.js"></script>
 	<script src="/components/form/form.js"></script>
 	<script src="/components/chat/chat.tmpl.js"></script>
 	<script src="/components/chat/chat.js"></script>
+
 
 
 	<script src="/views/scoreBoard.js"></script>
