--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,11 @@
 	<script src="/modules/router.js"></script>
 
 	<script src="/modules/models.js"> </script>
+	<script src="/modules/collection.js"></script>
 	<script src="/models/user.js"></script>
+	<script src="/models/session.js"></script>
+	<script src="/models/scoreBoard.js"></script>
+
 
 	<script src="/components/block/block.js"></script>
 	<script src="/components/input/input.tmpl.js"></script>
