добавлен роутинг не по /, дополена вьюха scoreboard

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 
 	<div class="js-login" hidden="hidden"></div>
 	<div class="js-signup" hidden="hidden"></div>
-	<div class="js-scoreBoard" hidden="hidden"></div>
+	<div class="js-scoreboard" hidden="hidden"></div>
 
-	<div class="mainElem" hidden="hidden">
+	<div class="mainpage" hidden="hidden">
 		<p> Ты залогинился! Ура!</p>
 	</div>
 
