заработали тесты, исправлененя к рк2 внесены

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 <body>
 
 
-	<div class="js-login" hidden="hidden"></div>
-	<div class="js-signup" hidden="hidden"></div>
-	<div class="js-scoreboard" hidden="hidden"></div>
+	<div class="login" hidden="hidden"></div>
+	<div class="signup" hidden="hidden"></div>
+	<div class="scoreboard" hidden="hidden"></div>
 
 	<div class="mainpage" hidden="hidden">
 		<p> Ты залогинился! Ура!</p>
