--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
 	<div class="mainpage" hidden="hidden">
 		<p> Ты залогинился! Ура!</p>
+		<a href="https://cloud.mail.ru/public/Fj6s/zYzdK6bSb"> Прототип </a>
 	</div>
 
 
@@ -48,7 +49,7 @@
 
 
 	<script src="/views/scoreBoard.js"></script>
-	<script src="/views/game.js"></script>
+	<script src="/views/game.js"> </script>
 	<script src="/views/login.js"></script>
 	<script src="/views/signup.js"></script>
 	<script src="/views/chat.js"></script>
