Добавил главное игровое окно

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
 	<script src="/views/login.js"></script>
 	<script src="/views/signup.js"></script>
 	<script src="/views/chat.js"></script>
+	<script src="/views/mainFrame.js"></script>
 
 
 	<script src="main.js"></script>
