--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
 	</div>
 
 
-
-	//<script src="/libs/technolibs/index.js"></script>
+	<script src="/modules/swLoader.js"></script>
 	<script src="/modules/pathToRegex.js"></script>
 	<script src="/modules/view.js"></script>
 	<script src="/modules/route.js"></script>
