--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,12 @@
 		<p> Ты залогинился! Ура!</p>
 		<a href="https://cloud.mail.ru/public/Fj6s/zYzdK6bSb"> Прототип </a>
 	</div>
+	<div class="js-game" hidden="hidden">
+		<canvas class="js-canvas"></canvas>
+	</div>
 
 
-
-	//<script src="/libs/technolibs/index.js"></script>
+	<script src="/libs/technolibs/index.js"></script>
 	<script src="/modules/pathToRegex.js"></script>
 	<script src="/modules/view.js"></script>
 	<script src="/modules/route.js"></script>
@@ -46,14 +48,18 @@
 	<script src="/components/chat/chat.tmpl.js"></script>
 	<script src="/components/chat/chat.js"></script>
 
-
+	<script src="/game/keymaster.js"></script>
+	<script src="/game/snake.js"></script>
+	<script src="/game/mouse.js"></script>
+	<script src="/game/SnakeGame.js"></script>
 
 	<script src="/views/scoreBoard.js"></script>
 	<script src="/views/game.js"> </script>
 	<script src="/views/login.js"></script>
 	<script src="/views/signup.js"></script>
 	<script src="/views/chat.js"></script>
-	<script src="/views/mainFrame.js"></script>
+	<script src="/views/main.js"></script>
+	<script src="/views/singlegame.js"></script>
 
 
 	<script src="main.js"></script>
